--- a/app/appMgr/css/main.css
+++ b/app/appMgr/css/main.css
@@ -1,2 +1,284 @@
-@import url("header.css");
-@import url("nav.css");
+body.appMgr{
+    padding-top: 84px;
+}
+#header {
+    color: #333;
+    font-size: 1em;
+    height: 84px;
+    background: #fff url(../img/top_header.jpg) top left no-repeat;
+
+}
+
+#mainNav {
+    width: auto;
+    line-height: normal;
+    height: 35px;
+    list-style: none;
+    margin: 0;
+    padding-left:350px;
+}
+
+#mainNav li {
+    padding: 0 0 0 8px;
+    /*background: url(../img/main/top_nav_tab_left.gif) 0px 12px  no-repeat ;*/
+    float: left;
+    /*clear: left;*/
+    margin: 0 3px;
+    height: 35px;
+}
+
+#mainNav a,#mainNav a:visited {
+    display: block;
+    /*float: left;*/
+    padding: 4px 16px 0 5px;
+    line-height: 29px;
+    font-size: 15px;
+    font-family:"Microsoft YaHei", Arial, sans-serif;
+    /*background: url(../img/main/top_nav_tab_right.gif) no-repeat top right;*/
+    color: #fff;
+    font-weight: normal;
+    letter-spacing:1px;
+    text-decoration: none;
+    white-space: nowrap;
+}
+
+#mainNav a:hover {
+    color: #ef9815;
+    text-decoration: none;
+}
+
+#level-2 {
+    width: 100%;
+    background: url(../img/level_2_bg.png) top left repeat-x;
+    clear: both;
+    height: 24px;
+    border-bottom:1px #cbcbcb solid;
+}
+
+#level-2 ul {
+    margin: 0 0 0 300px;
+    padding-top: 0;
+    list-style: none;
+    float: left;
+}
+
+#level-2 li {
+    padding: 0 0 0 4px;
+    /*background: url(../img/main/level_2_tab_left.gif) no-repeat top left;*/
+    float: left;
+    margin: 0 0 0 5px;
+    height: 20px;
+}
+
+#level-2 a,#level-2 a:visited {
+    display: block;
+    float: left;
+    padding: 1px .6em 0 .5em;
+    line-height: 16px;
+    font-size: 12px;
+    /*background: url(../img/main/level_2_tab_right.gif) no-repeat top right;*/
+    color: #333;
+    margin-top: 2px;
+    text-decoration: none;
+    white-space: nowrap;
+    letter-spacing:1px;
+}
+
+#level-2 a:hover {
+    color: #ef9815;
+    text-decoration: none;
+}
+
+#level-2 .current {
+    /*background: url(../img/main/level_2_tab_left_current.gif) no-repeat 0 0px;*/
+    height: 20px;
+
+}
+
+#level-2 .current a,#level-2 .current a:visited {
+    /*background: url(../img/main/level_2_tab_right_current.gif) no-repeat top right;*/
+    color: #333;
+    font-weight: bold;
+    line-height:16px;
+    border:1px #adadad solid;
+    background-color:#e6e6e6;
+}
+
+#level-2 a.dwindle, #level-2 a.dwindle:visited, #level-2 a.extend, #level-2 a.extend:visited {
+    margin-left: 12px;
+    color: #c6ddee;
+    margin-top: 9px;
+    text-decoration: none;
+    font-size: 12px;
+    display: block;
+    float:right;
+    line-height:1;
+    padding: 0 0 0 18px;
+}
+
+#site-nav {
+    width: auto;
+    min-width: 1024px;
+    line-height: 1.5;
+}
+
+#site-nav .menu {
+    position: relative;
+}
+
+#site-nav .menu-no {
+    display: block;
+    position: relative;
+    height: 20px;
+    line-height: 17px;
+    margin: 3px 1px 0;
+    padding: 0 10px 0 10px;
+    z-index: 10002;
+}
+
+#site-nav .menu-hd {
+    display: block;
+    position: relative;
+    height: 20px;
+    line-height: 17px;
+    margin: 3px 1px 0;
+    padding: 1px 0 0 10px;
+    cursor: pointer;
+    z-index: 10002;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+}
+
+#site-nav .hover .menu-hd {
+    margin: 2px 0 0 2px;
+    padding: 1px 0 0 8px;
+    border: 1px solid #BFBFBF;
+    border-bottom: none;
+    background: white;
+}
+
+#site-nav .menu-bd a {
+    width:100%;
+}
+
+#site-nav .menu-bd a:hover {
+    color: #F50;
+    width:100%;
+}
+
+#site-nav .menu-hd .bt {
+    position: absolute;
+    right: 10px;
+    top: 7px;
+    width: 0;
+    height: 0;
+    border: 4px solid whiteSmoke;
+    border-top-color: #666;
+    font-size: 0;
+    line-height: 0;
+    -webkit-transition: -webkit-transform .2s ease-in;
+    -webkit-backface-visibility: hidden;
+    font-weight: bold;
+}
+
+#site-nav .hover .menu-hd .bt {
+    border-color: #666 white white white;
+    -moz-transform: rotate(180deg);
+    -moz-transform-origin: 50% 30%;
+    -webkit-transform: rotate(180deg);
+    -webkit-transform-origin: 50% 30%;
+    -o-transform: rotate(180deg);
+    -o-transform-origin: 50% 30%;
+    transform: rotate(180deg);
+    transform-origin: 50% 30%;
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
+    top: 3px;
+}
+
+#site-nav .menu-bd {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 19px;
+    background: white;
+    border: 1px solid #BFBFBF;
+    z-index: 10001;
+    padding:6px;
+}
+
+#site-nav .hover .menu-bd {
+    display: block;
+}
+
+#site-nav .menu-bd-panel {
+    padding: 10px 10px 6px;
+}
+
+#site-nav a {
+    color: #666;
+}
+
+#site-nav div{
+    display: block;
+}
+
+#site-nav-bd {
+    height: 24px;
+    line-height: 22px;
+    margin: 0 auto;
+    z-index: 10000;
+    color: black;
+}
+
+#site-nav .quick-menu {
+    list-style-type: none;
+    position: absolute;
+    right: 0;
+    top: 1px;
+    margin: 0;
+}
+
+#site-nav .quick-menu li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+    margin: 0;
+    float: left;
+    padding: 1px 10px 0 10px;
+    background-position: right 6px;
+}
+
+#site-nav .quick-menu li.menu-item {
+    position: relative;
+    padding: 1px 0 0;
+}
+
+#site-nav .quick-menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 1em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 40px;
+}
+
+#site-nav .quick-menu b.leftline {
+    left: 1px;
+}
+
+#site-nav .quick-menu b.rightline {
+    right: 0;
+}
+
+#site-nav .quick-menu b.leftline, #site-nav .quick-menu b.rightline {
+    width: 1px;
+    position: absolute;
+    border-left: 1px solid #BFBFBF;
+    height: 12px;
+    display: block;
+    top: 6px;
+    z-index: 10002;
+    overflow: hidden;
+}
