--- a/app/appMgr/css/main.css
+++ b/app/appMgr/css/main.css
@@ -282,3 +282,38 @@ body.appMgr{
     z-index: 10002;
     overflow: hidden;
 }
+
+#affix.affix {
+    top: 84px;
+}
+.bj-app-sidenav{
+    width: 228px;
+    margin: 30px 0 0;
+    padding: 0;
+    background-color: white;
+    border-radius: 6px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .065);
+}
+.bj-app-sidenav > .active > a {
+    position: relative;
+    z-index: 2;
+    padding: 9px 15px;
+    border: 0;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, .15);
+    box-shadow: inset 1px 0 0 rgba(0, 0, 0, .1), inset -1px 0 0 rgba(0, 0, 0, .1);
+}
+.bj-app-sidenav > li > a {
+    display: block;
+    margin: 0 0 -1px;
+    padding: 8px 14px;
+    border: 1px solid #E5E5E5;
+}
+.bj-app-sidenav > li > a:hover {
+    background-color: whiteSmoke;
+}
+.bj-app-sidenav > li:first-child > a {
+    border-radius: 6px 6px 0 0;
+}
+.bj-app-sidenav > li:last-child > a {
+    border-radius: 0 0 6px 6px;
+}
