--- a/app/appMgr/css/main.css
+++ b/app/appMgr/css/main.css
@@ -294,7 +294,14 @@ body.appMgr{
     border-radius: 6px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, .065);
 }
-.bj-app-sidenav > .active > a {
+.bj-app-sidenav > li{
+    border: 1px solid #E5E5E5;
+    margin: 0 0 -1px;
+}
+.bj-app-sidenav > li.active{
+    border-color: #0088cc;
+}
+.bj-app-sidenav > li.active > a {
     position: relative;
     z-index: 2;
     padding: 9px 15px;
@@ -302,18 +309,34 @@ body.appMgr{
     text-shadow: 0 1px 0 rgba(0, 0, 0, .15);
     box-shadow: inset 1px 0 0 rgba(0, 0, 0, .1), inset -1px 0 0 rgba(0, 0, 0, .1);
 }
-.bj-app-sidenav > li > a {
-    display: block;
-    margin: 0 0 -1px;
+.bj-app-sidenav > li > a,
+.bj-app-sidenav > li > h3{
+    margin: 0;
     padding: 8px 14px;
-    border: 1px solid #E5E5E5;
+}
+.bj-app-sidenav > li > h3{
+    border-radius: 6px 6px 0 0;
+    font-size: 24px;
+    background-color: whiteSmoke;
+    color: #005580;
 }
 .bj-app-sidenav > li > a:hover {
     background-color: whiteSmoke;
 }
-.bj-app-sidenav > li:first-child > a {
+.bj-app-sidenav > li:first-child{
     border-radius: 6px 6px 0 0;
 }
-.bj-app-sidenav > li:last-child > a {
+.bj-app-sidenav > li:nth-child(2){
+    background-color: whiteSmoke;
+    padding: 8px 0 0 3px;
+}
+.bj-app-sidenav > li:last-child{
     border-radius: 0 0 6px 6px;
+}
+
+.bj-app-table{
+    margin-top: 30px;
+}
+.bj-app-table > thead > tr > th{
+    background-color: whiteSmoke;
 }
