--- a/app/appMgr/css/main.css
+++ b/app/appMgr/css/main.css
@@ -1,3 +1,6 @@
+body{
+    overflow-y: hidden;
+}
 #header {
     color: #333;
     font-size: 1em;
@@ -115,7 +118,6 @@
 
 #site-nav {
     width: auto;
-    min-width: 1024px;
     line-height: 1.5;
 }
 
