--- a/app/usersMgr/css/main.css
+++ b/app/usersMgr/css/main.css
@@ -1,115 +1,137 @@
-.testHeight{
+.testHeight {
     height: 2000px;
 }
-#affix.affix {
-    top: 0;
-}
-.bj-app-sidenav{
+#sidenav {
     width: 228px;
     margin: 30px 0 0;
     padding: 0;
     background-color: white;
     border-radius: 6px;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, .065);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
 }
-.bj-app-sidenav > ul.nav > li{
+#sidenav.affix {
+    top: 0;
+}
+#sidenav #sidenav-search {
+    margin-left: 4px;
+}
+#sidenav > ul.nav > li {
     border: 1px solid #E5E5E5;
     margin: 0 0 -1px;
 }
-.bj-app-sidenav > ul.nav > li.active > a {
+#sidenav > ul.nav > li:first-child {
+    border-radius: 6px 6px 0 0;
+}
+#sidenav > ul.nav > li:last-child {
+    border-radius: 0 0 6px 6px;
+}
+#sidenav > ul.nav > li.active > a {
     position: relative;
     z-index: 2;
     padding: 9px 15px;
     border: 0;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, .15);
-    box-shadow: inset 1px 0 0 rgba(0, 0, 0, .1), inset -1px 0 0 rgba(0, 0, 0, .1);
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.1), inset -1px 0 0 rgba(0, 0, 0, 0.1);
 }
-.bj-app-sidenav > ul.nav > li > a{
+#sidenav > ul.nav > li.active > a .icon-chevron-right {
+    opacity: 1;
+}
+#sidenav > ul.nav > li > a {
     margin: 0;
     padding: 8px 14px;
 }
-.bj-app-sidenav > ul.nav > li:first-child{
-    border-radius: 6px 6px 0 0;
+#sidenav > ul.nav > li > a .icon-chevron-right {
+    opacity: .25;
 }
-.bj-app-sidenav > ul.nav > li:last-child{
-    border-radius: 0 0 6px 6px;
-}
-.bj-subnav{
+#sidenav .bj-subnav {
     margin-bottom: 0;
     margin-left: 30px;
 }
-.bj-app-toolbar > .navbar-inner > *{
+#appContent > .bj-app-toolbar {
+    margin-top: 30px;
+}
+#appContent > .bj-app-toolbar > .navbar-inner > * {
     margin-top: 4px;
 }
-.bj-mt3{
+#appContent > .bj-app-searchbar {
+    margin-top: 30px;
+}
+#appContent > .bj-app-searchbar > navbar-inner > .bj-btngUserStatus {
     top: 3px;
 }
-.bj-mt3 > .bj-btn-success.active{
-    color: #ffffff;
+#appContent > .bj-app-searchbar > navbar-inner > .bj-btngUserStatus > .bj-btn-success.active {
+    color: rgba(255, 255, 255, 0.75);
     background-color: #51a351;
     text-shadow: none;
 }
-.bj-mt3 > .bj-btn-warning.active{
-    color: #ffffff;
+#appContent > .bj-app-searchbar > navbar-inner > .bj-btngUserStatus > .bj-btn-warning.active {
+    color: rgba(255, 255, 255, 0.75);
     background-color: #f89406;
     text-shadow: none;
 }
-.bj-app-toolbar,
-.bj-app-table{
-    margin-top: 30px;
+#appContent > .bj-app-searchbar > navbar-inner > #form_search {
+    margin: 0;
 }
-
-.bj-app-table > thead > tr > th{
+#appContent > .bj-app-searchbar > navbar-inner > #form_moreOptSearch {
+    margin-bottom: 0;
+}
+#appContent > .bj-app-searchbar > navbar-inner > #form_moreOptSearch input {
+    width: 92%;
+}
+#appContent .bj-app-table > thead > tr > th {
     background-color: whiteSmoke;
 }
-@media (min-width: 1200px){
-    .bj-app-sidenav {
+@media (min-width: 1200px) {
+    #sidenav {
         width: 258px;
     }
-    input.bj-app-sidenav-search{
-        width: 237px
+    #sidenav-search {
+        width: 236px;
     }
 }
 @media (min-width: 980px) {
-    .bj-app-sidenav {
+    #sidenav {
         top: 0;
         margin-top: 30px;
         margin-right: 0;
     }
 }
 @media (min-width: 768px) and (max-width: 979px) {
-    .bj-app-sidenav {
+    #sidenav {
         width: 166px;
         margin-top: 20px;
     }
-    input.bj-app-sidenav-search{
-        width: 145px;
+    #sidenav-search {
+        width: 144px;
     }
 }
 @media (max-width: 767px) {
-    .bj-app-sidenav {
+    #sidenav {
         width: auto;
         margin-bottom: 20px;
     }
-    .bj-app-sidenav.affix {
+    #sidenav.affix {
         position: static;
         width: auto;
         top: 0;
     }
-    input.bj-app-sidenav-search{
+    #sidenav-search {
         width: 97%;
+        margin-left: 0;
     }
 }
 @media (max-width: 480px) {
-    input.bj-app-sidenav-search{
+    #sidenav-search {
         width: 95%;
+        margin-left: 0;
     }
 }
+
+
 @media only screen and (min-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
 }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-only screen and (min-resolution: 144dpi) {
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi) {
     /* Style adjustments for high resolution devices */
 }
