--- a/app/usersMgr/less/main.less
+++ b/app/usersMgr/less/main.less
@@ -1,116 +1,185 @@
-/*todo:改成less*/
-.testHeight{
-  height: 2000px;
-}
-#affix.affix {
-  top: 0;
-}
-.bj-app-sidenav{
-  width: 228px;
-  margin: 30px 0 0;
-  padding: 0;
-  background-color: white;
-  border-radius: 6px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, .065);
-}
-.bj-app-sidenav > ul.nav > li{
-  border: 1px solid #E5E5E5;
-  margin: 0 0 -1px;
-}
-.bj-app-sidenav > ul.nav > li.active > a {
-  position: relative;
-  z-index: 2;
-  padding: 9px 15px;
-  border: 0;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, .15);
-  box-shadow: inset 1px 0 0 rgba(0, 0, 0, .1), inset -1px 0 0 rgba(0, 0, 0, .1);
-}
-.bj-app-sidenav > ul.nav > li > a{
-  margin: 0;
-  padding: 8px 14px;
-}
-.bj-app-sidenav > ul.nav > li:first-child{
-  border-radius: 6px 6px 0 0;
-}
-.bj-app-sidenav > ul.nav > li:last-child{
-  border-radius: 0 0 6px 6px;
-}
-.bj-subnav{
-  margin-bottom: 0;
-  margin-left: 30px;
-}
-.bj-app-toolbar > .navbar-inner > *{
-  margin-top: 4px;
-}
-.bj-mt3{
-  top: 3px;
-}
-.bj-mt3 > .bj-btn-success.active{
-  color: #ffffff;
-  background-color: #51a351;
-  text-shadow: none;
-}
-.bj-mt3 > .bj-btn-warning.active{
-  color: #ffffff;
-  background-color: #f89406;
-  text-shadow: none;
-}
-.bj-app-toolbar,
-.bj-app-table{
-  margin-top: 30px;
+//todo:改成less
+//bootstrap中定义的变量
+@btnSuccessBackgroundHighlight: #51a351;
+@btnWarningBackgroundHighlight: #f89406;
+
+//自定义的变量
+@contentMt: 30px;
+
+.testHeight {
+    height: 2000px;
 }
 
-.bj-app-table > thead > tr > th{
-  background-color: whiteSmoke;
+#sidenav {
+    width: 228px;
+    margin: @contentMt 0 0;
+    padding: 0;
+    background-color: white;
+    border-radius: 6px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .065);
+
+    &.affix {
+        top: 0;
+    }
+
+    #sidenav-search {
+        margin-left: 4px;
+    }
+
+    > ul.nav {
+        >li {
+            border: 1px solid #E5E5E5;
+            margin: 0 0 -1px;
+            &:first-child{
+                border-radius: 6px 6px 0 0;
+            }
+            &:last-child{
+                border-radius: 0 0 6px 6px;
+            }
+            &.active > a{
+                position: relative;
+                z-index: 2;
+                padding: 9px 15px;
+                border: 0;
+                text-shadow: 0 1px 0 rgba(0, 0, 0, .15);
+                box-shadow: inset 1px 0 0 rgba(0, 0, 0, .1), inset -1px 0 0 rgba(0, 0, 0, .1);
+
+                .icon-chevron-right {
+                    opacity: 1;
+                }
+            }
+            > a{
+                margin: 0;
+                padding: 8px 14px;
+
+                .icon-chevron-right {
+                    opacity: .25;
+                }
+            }
+        }
+    }
+
+    .bj-subnav {
+        margin-bottom: 0;
+        margin-left: 30px;
+    }
 }
-@media (min-width: 1200px){
-  .bj-app-sidenav {
-    width: 258px;
-  }
-  input.bj-app-sidenav-search{
-    width: 237px
-  }
+
+#appContent{
+    > .bj-app-toolbar {
+        margin-top: @contentMt;
+        > .navbar-inner {
+            > * {
+                margin-top: 4px;
+            }
+        }
+    }
+
+    > .bj-app-searchbar{
+        margin-top: @contentMt;
+        > .navbar-inner {
+            > .bj-btngUserStatus {
+                margin-top: 4px;
+                top: 3px;
+
+                > .bj-btn-success.active {
+                    color: rgba(255,255,255,.75);
+                    background-color: @btnSuccessBackgroundHighlight;
+                    text-shadow: none;
+                }
+                > .bj-btn-warning.active {
+                    color: rgba(255,255,255,.75);
+                    background-color: @btnWarningBackgroundHighlight;
+                    text-shadow: none;
+                }
+            }
+
+            > #form_search{
+                margin: 4px 0 0;
+            }
+
+            > #form_moreOptSearch{
+                margin-bottom: 0;
+                > .row-fluid {
+                    &:first-child{
+                        padding-top: 10px;
+                    }
+                    &:last-child{
+                        padding-bottom: 10px;
+                    }
+                }
+                input {
+                    width: 92%;
+                }
+            }
+        }
+    }
+
+    .bj-app-table {
+        > thead > tr > th {
+            background-color: whiteSmoke;
+        }
+    }
 }
+
+@media (min-width: 1200px) {
+    #sidenav {
+        width: 258px;
+    }
+
+    #sidenav-search {
+        width: 236px;
+    }
+}
+
 @media (min-width: 980px) {
-  .bj-app-sidenav {
-    top: 0;
-    margin-top: 30px;
-    margin-right: 0;
-  }
+    #sidenav {
+        top: 0;
+        margin-top: 30px;
+        margin-right: 0;
+    }
 }
+
 @media (min-width: 768px) and (max-width: 979px) {
-  .bj-app-sidenav {
-    width: 166px;
-    margin-top: 20px;
-  }
-  input.bj-app-sidenav-search{
-    width: 145px;
-  }
+    #sidenav {
+        width: 166px;
+        margin-top: 20px;
+    }
+
+    #sidenav-search {
+        width: 144px;
+    }
 }
+
 @media (max-width: 767px) {
-  .bj-app-sidenav {
-    width: auto;
-    margin-bottom: 20px;
-  }
-  .bj-app-sidenav.affix {
-    position: static;
-    width: auto;
-    top: 0;
-  }
-  input.bj-app-sidenav-search{
-    width: 97%;
-  }
+    #sidenav {
+        width: auto;
+        margin-bottom: 20px;
+
+        &.affix {
+            position: static;
+            width: auto;
+            top: 0;
+        }
+    }
+
+    #sidenav-search {
+        width: 97%;
+        margin-left: 0;
+    }
 }
+
 @media (max-width: 480px) {
-  input.bj-app-sidenav-search{
-    width: 95%;
-  }
+    #sidenav-search {
+        width: 95%;
+        margin-left: 0;
+    }
 }
+
 @media only screen and (min-width: 35em) {
 /* Style adjustments for viewports that meet the condition */
 }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-only screen and (min-resolution: 144dpi) {
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi) {
 /* Style adjustments for high resolution devices */
 }
