broadaJs-1 整合bootstrap 封装grid视图组件粗略完成

--- a/resource/jslib/broada/bsview/templates/grid.html
+++ b/resource/jslib/broada/bsview/templates/grid.html
@@ -13,10 +13,10 @@
     {{#each record in view.content}}
     <tr>
         {{#if view.isMultiMode}}
-        <th><input type="checkbox"></th>
+        <td><input type="checkbox"></td>
         {{/if}}
-        {{#each view.heads}}
-        <td>{{record}}</td>
+        {{#each col in view.heads}}
+        <td>{{getValueInNestEach record col.mapping}}</td>
         {{/each}}
     </tr>
     {{/each}}
