broadaJs-1 整合bootstrap 封装grid视图组件

--- a/resource/jslib/broada/bsview/templates/grid.html
+++ b/resource/jslib/broada/bsview/templates/grid.html
@@ -10,7 +10,7 @@
     </tr>
     </thead>
     <tbody>
-    {{#each record in view.content}}
+    {{#each record in content}}
     <tr>
         {{#if view.isMultiMode}}
         <td><input type="checkbox"></td>
