--- a/app/usersMgr/less/main.less
+++ b/app/usersMgr/less/main.less
@@ -131,7 +131,7 @@
     }
 
     .bj-app-table {
-        > thead > tr > th {
+        thead > tr > th {
             background-color: whiteSmoke;
         }
     }
@@ -184,13 +184,7 @@
     }
 
     .bj-app-table {
-        tr > th {
-            &:nth-child(4),
-            &:nth-child(5),
-            &:nth-child(6){
-                display: none;
-            }
-        }
+        tr > th,
         tr > td{
             &:nth-child(4),
             &:nth-child(5),
@@ -211,16 +205,7 @@
         top: 0;
     }
     .bj-app-table {
-        tr > th {
-            &:nth-child(4),
-            &:nth-child(5),
-            &:nth-child(6),
-            &:nth-child(7),
-            &:nth-child(8),
-            &:nth-child(9){
-                display: none;
-            }
-        }
+        tr > th,
         tr > td{
             &:nth-child(4),
             &:nth-child(5),
