--- a/app/usersMgr/less/main.less
+++ b/app/usersMgr/less/main.less
@@ -4,6 +4,7 @@
 @btnWarningBackgroundHighlight: #f89406;
 @linkColor: #08c;
 @white: #fff;
+@tableBorder: #ddd;
 
 //自定义的变量
 @contentMt: 30px;
@@ -134,6 +135,11 @@
         thead > tr > th {
             background-color: whiteSmoke;
         }
+    }
+
+    > .bj-form-border {
+        border: 1px solid @tableBorder;
+        border-radius: 4px;
     }
 }
 
