broadaJs-1 整合bootstrap userform视图

--- a/app/usersMgr/js/template/userForm.html
+++ b/app/usersMgr/js/template/userForm.html
@@ -26,7 +26,6 @@
     </div>
     <div class="row-fluid">
         <button class="btn btn-primary">保存</button>
-        <a class="btn" data-toggle="collapse"
-           data-target="#form_moreOptSearch">取消</a>
+        <a class="btn" {{action "backToList" target="controller"}}>取消</a>
     </div>
 </form>
