--- a/app/usersMgr/js/template/userForm.html
+++ b/app/usersMgr/js/template/userForm.html
@@ -1,28 +1,31 @@
 <form class="row-fluid">
-    <legend>新建/编辑用户</legend>
+    <legend>
+        {{controller.formTitle}}
+    </legend>
+    {{view Ember.TextField size="16" valueBinding="id" disabled="disabled" type="hidden"}}
     <div class="row-fluid">
         <label class="span2">登录帐号</label>
-        <div class="span4"><input type="text" size="16"></div>
+        <div class="span4">{{view Ember.TextField size="16" valueBinding="account" disabledBinding="controller.isEditing"}}</div>
         <label class="span2">电子邮箱</label>
-        <div class="span4"><input type="text" size="16"></div>
+        <div class="span4">{{view Ember.TextField size="16" valueBinding="email"}}</div>
     </div>
     <div class="row-fluid">
         <label class="span2">用户名</label>
-        <div class="span4"><input type="text" size="16"></div>
+        <div class="span4">{{view Ember.TextField size="16" valueBinding="username" disabledBinding="controller.isEditing"}}</div>
         <label class="span2">联系电话</label>
-        <div class="span4"><input type="text" size="16"></div>
+        <div class="span4">{{view Ember.TextField size="16" valueBinding="telephoneNum"}}</div>
     </div>
     <div class="row-fluid">
         <label class="span2">职位</label>
-        <div class="span4"><input type="text" size="16"></div>
+        <div class="span4">{{view Ember.TextField size="16" valueBinding="position"}}</div>
         <label class="span2">部门</label>
-        <div class="span4"><input type="text" size="16"></div>
+        <div class="span4">{{view Ember.TextField size="16" valueBinding="department"}}</div>
     </div>
     <div class="row-fluid">
         <label class="span2">状态</label>
-        <div class="span4"><input type="text" size="16"></div>
+        <div class="span4">{{view Ember.TextField size="16" valueBinding="status"}}</div>
         <label class="span2">移动电话</label>
-        <div class="span4"><input type="text" size="16"></div>
+        <div class="span4">{{view Ember.TextField size="16" valueBinding="mobilePhoneNum"}}</div>
     </div>
     <div class="row-fluid">
         <button class="btn btn-primary">保存</button>
