--- a/app/usersMgr/js/template/userForm.html
+++ b/app/usersMgr/js/template/userForm.html
@@ -1,17 +1,17 @@
 <form class="row-fluid">
     <legend>
-        {{controller.formTitle}}
+        {{formTitle}}
     </legend>
     {{view Ember.TextField size="16" valueBinding="id" disabled="disabled" type="hidden"}}
     <div class="row-fluid">
         <label class="span2">登录帐号</label>
-        <div class="span4">{{view Ember.TextField size="16" valueBinding="account" disabledBinding="controller.isEditing"}}</div>
+        <div class="span4">{{view Ember.TextField size="16" valueBinding="account" disabledBinding="isEditing"}}</div>
         <label class="span2">电子邮箱</label>
         <div class="span4">{{view Ember.TextField size="16" valueBinding="email"}}</div>
     </div>
     <div class="row-fluid">
         <label class="span2">用户名</label>
-        <div class="span4">{{view Ember.TextField size="16" valueBinding="username" disabledBinding="controller.isEditing"}}</div>
+        <div class="span4">{{view Ember.TextField size="16" valueBinding="username" disabledBinding="isEditing"}}</div>
         <label class="span2">联系电话</label>
         <div class="span4">{{view Ember.TextField size="16" valueBinding="telephoneNum"}}</div>
     </div>
@@ -28,7 +28,8 @@
         <div class="span4">{{view Ember.TextField size="16" valueBinding="mobilePhoneNum"}}</div>
     </div>
     <div class="row-fluid">
-        <button class="btn btn-primary">保存</button>
+        <button class="btn btn-primary" {{action "save" target="controller"}}>保存</button>
+        <button class="btn btn-primary" {{action "saveAndAdd" target="controller"}}>保存并新建</button>
         <a class="btn" {{action "backToList" target="controller"}}>取消</a>
     </div>
 </form>
