--- a/app/usersMgr/less/main.less
+++ b/app/usersMgr/less/main.less
@@ -1,4 +1,3 @@
-//todo:改成less
 //bootstrap中定义的变量,暂时拷贝过来，以后要跟bootstrap中保持一致
 @btnSuccessBackgroundHighlight: #51a351;
 @btnWarningBackgroundHighlight: #f89406;
@@ -134,6 +133,9 @@
     .bj-app-table {
         thead > tr > th {
             background-color: whiteSmoke;
+        }
+        .pagination {
+            margin: 0;
         }
     }
 
