--- a/apps/usersMgr/less/main.less
+++ b/apps/usersMgr/less/main.less
@@ -145,6 +145,14 @@
     }
 }
 
+
+.lt-ie9{
+    #form_search{
+        INPUT[type="text"]{
+            min-height: 20px;
+        }
+    }
+}
 @media (min-width: 1200px) {
     #sidenav {
         width: 258px;
@@ -152,14 +160,6 @@
 
     #sidenav-search {
         width: 236px;
-    }
-}
-
-@media (min-width: 980px) {
-    #sidenav {
-        top: 0;
-        margin-top: 30px;
-        margin-right: 0;
     }
 }
 
