--- a/resource/jslib/broada/bsview/templates/grid-demo.html
+++ b/resource/jslib/broada/bsview/templates/grid-demo.html
@@ -171,4 +171,26 @@
         <td><span class="label label-success">正常</span></td>
     </tr>
     </tbody>
+    <tfoot>
+    <tr>
+        <td colspan="10">
+            <div class="pagination pagination-right">
+                <ul>
+                    <li><a href="#">&laquo;</a></li>
+                    <li><a href="#" data-bsview-pagenum="1">1</a></li>
+                    <li class="active"><a href="#" data-bsview-pagenum="2">2</a></li>
+                    <li><a href="#" data-bsview-pagenum="3">3</a></li>
+                    <li><a href="#" data-bsview-pagenum="4">4</a></li>
+                    <li><a href="#" data-bsview-pagenum="5">5</a></li>
+                    <li><a href="#" data-bsview-pagenum="6">6</a></li>
+                    <li><a href="#" data-bsview-pagenum="7">7</a></li>
+                    <li><a href="#" data-bsview-pagenum="8">8</a></li>
+                    <li><a href="#" data-bsview-pagenum="9">9</a></li>
+                    <li><a href="#" data-bsview-pagenum="10">10</a></li>
+                    <li><a href="#">&raquo;</a></li>
+                </ul>
+            </div>
+        </td>
+    </tr>
+    </tfoot>
 </table>
