--- a/resource/jslib/broada/bsview/templates/grid.html
+++ b/resource/jslib/broada/bsview/templates/grid.html
@@ -10,7 +10,7 @@
     </tr>
     </thead>
     <tbody>
-    {{#each record in content}}
+    {{#each record in view.content}}
     <tr>
         {{#if view.isMultiMode}}
         <td><input type="checkbox"></td>
@@ -21,26 +21,4 @@
     </tr>
     {{/each}}
     </tbody>
-    <tfoot>
-    <tr>
-        <td colspan="10">
-            <div class="pagination pagination-right">
-                <ul>
-                    <li><a href="#">&laquo;</a></li>
-                    <li><a href="#" data-bsview-pagenum="1">1</a></li>
-                    <li class="active"><a href="#" data-bsview-pagenum="2">2</a></li>
-                    <li><a href="#" data-bsview-pagenum="3">3</a></li>
-                    <li><a href="#" data-bsview-pagenum="4">4</a></li>
-                    <li><a href="#" data-bsview-pagenum="5">5</a></li>
-                    <li><a href="#" data-bsview-pagenum="6">6</a></li>
-                    <li><a href="#" data-bsview-pagenum="7">7</a></li>
-                    <li><a href="#" data-bsview-pagenum="8">8</a></li>
-                    <li><a href="#" data-bsview-pagenum="9">9</a></li>
-                    <li><a href="#" data-bsview-pagenum="10">10</a></li>
-                    <li><a href="#">&raquo;</a></li>
-                </ul>
-            </div>
-        </td>
-    </tr>
-    </tfoot>
 </table>
