--- a/apps/usersMgr/less/main.less
+++ b/apps/usersMgr/less/main.less
@@ -148,7 +148,9 @@ body{
 
     .bj-app-table {
         margin-top: @contentMt;
-        width: 100%;
+        table{
+            width: 100%;
+        }
         th, td{
             text-align: left;
             padding: 4px;
