--- a/resource/jslib/broada/bsview/templates/grid.html
+++ b/resource/jslib/broada/bsview/templates/grid.html
@@ -1,6 +1,6 @@
-<table class="table table-bordered table-hover">
+<table class="ui-widget ui-widget-content">
     <thead>
-    {{#view view.TheadView}}
+    {{#view view.TheadView classNames="ui-widget-header"}}
         {{#if view.isMultiMode}}
         <th>{{view Ember.Checkbox}}</th>
         {{/if}}
