--- a/apps/usersMgr/js/template/userForm.html
+++ b/apps/usersMgr/js/template/userForm.html
@@ -28,8 +28,8 @@
         <div class="span4">{{view Ember.TextField size="16" valueBinding="mobilePhoneNum"}}</div>
     </div>
     <div class="row-fluid">
-        <button class="btn btn-primary" {{action "save" target="controller"}}>保存</button>
-        <button class="btn btn-primary" {{action "saveAndAdd" target="controller"}}>保存并新建</button>
+        <button class="btn" {{action "save" target="controller"}}>保存</button>
+        <button class="btn" {{action "saveAndAdd" target="controller"}}>保存并新建</button>
         <a class="btn" {{action "backToList" target="controller"}}>取消</a>
     </div>
 </form>
