broadaJs-1 整合bootstrap 修复几个bug

--- a/apps/usersMgr/less/main.less
+++ b/apps/usersMgr/less/main.less
@@ -194,9 +194,9 @@
     .bj-app-table {
         tr > th,
         tr > td{
-            &:nth-child(4),
-            &:nth-child(5),
-            &:nth-child(6){
+            &.mobilePhoneNum,
+            &.email,
+            &.ywdw{
                 display: none;
             }
         }
@@ -215,12 +215,12 @@
     .bj-app-table {
         tr > th,
         tr > td{
-            &:nth-child(4),
-            &:nth-child(5),
-            &:nth-child(6),
-            &:nth-child(7),
-            &:nth-child(8),
-            &:nth-child(9){
+            &.mobilePhoneNum,
+            &.email,
+            &.ywdw,
+            &.department,
+            &.position,
+            &.status{
                 display: none;
             }
         }
